--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "tchat-app",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
-  
 }
-
-
